--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Vaibhav Pachpute</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -25,9 +27,9 @@
 
 
 </head>
+
 <body>
   <app-root></app-root>
-
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -40,21 +42,72 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+  <script>var words = ["Hello Im Vaibhav", "I'm Web-Developer", "I'm Flutter Developer"],
+    part,
+    i = 0,
+    offset = 0,
+    len = words.length,
+    forwards = true,
+    skip_count = 0,
+    skip_delay = 15,
+    speed = 100;
   
-<script type="text/javascript">
-  $(function () {
-    var navbar = $('.header-inner');
-    $(window).scroll(function () {
-      if ($(window).scrollTop() <= 40) {
-        navbar.removeClass('navbar-scroll');
+  var wordflick = function () {
+    setInterval(function () {
+      if (forwards) {
+        if (offset >= words[i].length) {
+          ++skip_count;
+          if (skip_count == skip_delay) {
+            forwards = false;
+            skip_count = 0;
+          }
+        }
       } else {
-        navbar.addClass('navbar-scroll');
+        if (offset == 0) {
+          forwards = true;
+          i++;
+          offset = 0;
+          if (i >= len) {
+            i = 0;
+          }
+        }
       }
-    });
+      part = words[i].substr(0, offset);
+      if (skip_count == 0) {
+        if (forwards) {
+          offset++;
+        } else {
+          offset--;
+        }
+      }
+      $(".word").text(part);
+    }, speed);
+  };
+  
+  $(document).ready(function () {
+    wordflick();
   });
-</script>
+  </script>
+
+
+  <script type="text/javascript">
+    $(function () {
+      var navbar = $('.header-inner');
+      $(window).scroll(function () {
+        if ($(window).scrollTop() <= 40) {
+          navbar.removeClass('navbar-scroll');
+        } else {
+          navbar.addClass('navbar-scroll');
+        }
+      });
+    });
+  </script>
 
 </body>
+
 </html>
