--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,16 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!--fontawesome-->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+    </style>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <link rel="stylesheet" href="style.css">
-
-
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-
-
 </head>
 
 <body>
@@ -47,7 +45,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-  <script>var words = ["Hello Im Vaibhav", "I'm Web-Developer", "I'm Flutter Developer"],
+  <script>var words = ["Hello, I'm Vaibhav", "I'm Web-Developer", "I'm Flutter Developer"],
     part,
     i = 0,
     offset = 0,
@@ -94,7 +92,6 @@
   });
   </script>
 
-
   <script type="text/javascript">
     $(function () {
       var navbar = $('.header-inner');
@@ -107,6 +104,11 @@
       });
     });
   </script>
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </body>
 
