started with new idea

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-  <script>var words = ["Hello, I'm Vaibhav", "I'm Web-Developer", "I'm Flutter Developer"],
+  <script>var words = ["Vaibhav", "Web-Developer", "Flutter Developer"],
     part,
     i = 0,
     offset = 0,
@@ -90,10 +90,7 @@
   $(document).ready(function () {
     wordflick();
   });
-  
-
-
-  
+    
   </script>
 
   <script type="text/javascript">
