--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-  <script>var words = ["Vaibhav", "Web-Developer", "Flutter Developer"],
+  <script>var words = ["Student.","Freelancer.", "Web-Developer.", "Flutter Developer."],
     part,
     i = 0,
     offset = 0,
